# arm_analyzer

./: .gitignore  CMakeLists.txt  README.md  build.sh  build2.sh  compile_commands.json  find_functions.cpp  test.cpp
scripts/: analyze.sh
souffle/: patterns.dl
src/: FactEmitter.cpp  FactEmitter.h  LoopAnalyzer.cpp  LoopAnalyzer.h  Suggest.cpp  Suggest.h  main.cpp
test/: sample.c
